@@ -174,6 +174,9 @@ Enhancements
     checking if it can be used in parallel analysis. (Issue #2996, PR #2950)
 
 Changes
+  * `msd.EinsteinMSD` now uses the `analysis.base.Results` class to store
+    analysis results. The `EinsteinMSD.timeseries` and
+    `EinsteinMSD.msds_by_particle` attributes are now deprecated.
   * `GNMAnalysis`, `LinearDensity`, `PersistenceLength` and
     `AnalysisFromFunction` use the `results` attribute.
   * Fixed inaccurate docstring inside the RMSD class (Issue #2796, PR #3134) 
